fix: changed wrapping css for diabledText

--- a/src/styles/components/_detailed-list.scss
+++ b/src/styles/components/_detailed-list.scss
@@ -293,10 +293,11 @@
                     }
 
                     > .mynah-detailed-list-item-disabled-text {
-                        flex-shrink: 0;
+                        flex-shrink: 1;
                         color: var(--mynah-color-text-weak);
                         font-size: var(--mynah-font-size-small);
                         font-style: italic;
+                        white-space: nowrap;
                     }
                 }
             }
